# wede-sdk-python

./: README.md  pyproject.toml  setup.py
wede/: __init__.py  cache.py  client.py  errors.py  offline_dispatch.py  score_engine.py  types.py
